fixed text wrapping issue in ranking chart date column, added footnote to all ranking chart types, left-aligned tooltip text

--- a/static/css/ranking.scss
+++ b/static/css/ranking.scss
@@ -53,8 +53,3 @@ td .num-value {
   width: 140px;
   text-align: right;
 }
-
-td.ranking-date-cell {
-  padding-left: 1rem;
-  color: #777;
-}
