--- a/static/css/shared/_subject_page.scss
+++ b/static/css/shared/_subject_page.scss
@@ -305,5 +305,6 @@ article.category {
     background-color: var(--gm-3-ref-neutral-neutral-40);
     color: white;
     font-size: 12px;
+    text-align: left;
   }
 }
